# app-store-hunter

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  RESTRUCTURING_SUMMARY.md  pyproject.toml  requirements.txt  setup.py
docs/: api.md  cli.md
examples/: api-example.py  basic_usage.py  batch_download.py
scripts/: README.md  bump_version.py  upload_to_pypi.py  upload_to_pypi.sh
